--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "mssql": "^10.0.2",
-    "scripts": {
-      "start":  "node server.js"
-    }
+    "mssql": "^10.0.2"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
